--- a/src/test/testFS/test-deploy/pom.xml
+++ b/src/test/testFS/test-deploy/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.odfi</groupId>
 		<artifactId>superpom-scala</artifactId>
-		<version>2.12.1.r7</version>
+		<version>2.12.1.r9</version>
 	</parent>
 
 	
@@ -36,7 +36,7 @@
 			</snapshots>
 			<id>odfi.central</id>
 			<name>plugins-release</name>
-			<url>https://www.opendesignflow.org/maven/repository/internal/</url>
+			<url>http://www.opendesignflow.org/maven/repository/internal/</url>
 		</pluginRepository>
 		<pluginRepository>
 			<snapshots>
@@ -44,7 +44,7 @@
 			</snapshots>
 			<id>odfi.snapshots</id>
 			<name>plugins-snapshot</name>
-			<url>https://www.opendesignflow.org/maven/repository/snapshots/</url>
+			<url>http://www.opendesignflow.org/maven/repository/snapshots/</url>
 		</pluginRepository>
 	</pluginRepositories>
 	<repositories>
@@ -65,7 +65,7 @@
 			</snapshots>
 			<id>odfi.central</id>
 			<name>odfi-release</name>
-			<url>https://www.opendesignflow.org/maven/repository/internal/</url>
+			<url>http://www.opendesignflow.org/maven/repository/internal/</url>
 		</repository>
 		<repository>
 			<snapshots>
@@ -73,7 +73,7 @@
 			</snapshots>
 			<id>odfi.snapshots</id>
 			<name>odfi-snapshot</name>
-			<url>https://www.opendesignflow.org/maven/repository/snapshots/</url>
+			<url>http://www.opendesignflow.org/maven/repository/snapshots/</url>
 		</repository>
 	</repositories>
 
